tests/ui/impl-trait/unsized_coercion3.next.stderr
error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion3.rs:13:17
   |
LL |         let x = hello();
   |                 ^^^^^^^ types differ

error[E0308]: mismatched types
  --> $DIR/unsized_coercion3.rs:18:5
   |
LL | fn hello() -> Box<impl Trait + ?Sized> {
   |               ------------------------
   |               |   |
   |               |   the expected opaque type
   |               expected `Box<impl Trait + ?Sized>` because of return type
...
LL |     Box::new(1u32)
   |     ^^^^^^^^^^^^^^ types differ
   |
   = note: expected struct `Box<impl Trait + ?Sized>`
              found struct `Box<u32>`

error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion3.rs:13:17
   |
LL |         let x = hello();
   |                 ^^^^^^^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0271]: type mismatch resolving `hello::{opaque#0} normalizes-to _`
  --> $DIR/unsized_coercion3.rs:11:1
   |
LL | fn hello() -> Box<impl Trait + ?Sized> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
